--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Edit.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Edit.cshtml
@@ -8,28 +8,33 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="SalaId" class="control-label"></label>
-                @Html.DropDownListFor(model => model.SalaId, ViewBag.salas as SelectList, new
-           { @class = "form-control", @id = "sala" })
-                <span asp-validation-for="SalaId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UsuarioId" class="control-label"></label>
-                @Html.DropDownListFor(model => model.UsuarioId, ViewBag.usuarios as SelectList, new
-           { @class = "form-control", @id = "usuario" })
-                <span asp-validation-for="UsuarioId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Objetivo" class="control-label"></label>
-                <input asp-for="Objetivo" id="objetivo" class="form-control" />
-                <span asp-validation-for="Objetivo" class="text-danger"></span>
+            <div class="ocupation col-md-6">
+                <div class="form-group" hidden>
+                    <input asp-for="Id" id="id-item" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="SalaId" class="control-label"></label>
+                    @Html.DropDownListFor(model => model.SalaId, ViewBag.salas as SelectList, new
+               { @class = "form-control", @id = "sala" })
+                    <span asp-validation-for="SalaId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="UsuarioId" class="control-label"></label>
+                    @Html.DropDownListFor(model => model.UsuarioId, ViewBag.usuarios as SelectList, new
+               { @class = "form-control", @id = "usuario" })
+                    <span asp-validation-for="UsuarioId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Objetivo" class="control-label"></label>
+                    <input asp-for="Objetivo" id="objetivo" class="form-control" />
+                    <span asp-validation-for="Objetivo" class="text-danger"></span>
+                </div>
             </div>
 
-            <div class="ocupation">
+            <div class="ocupation  col-md-8">
                 <div class="form-group align-element">
                     <label asp-for="DataInicio" class="control-label"></label>
                     <input asp-for="DataInicio" id="dataInicio" class="form-control" />
@@ -42,7 +47,7 @@
                 </div>
             </div>
 
-            <div class="ocupation">
+            <div class="ocupation ocupation col-md-8">
                 <div class="form-group align-element">
                     <label asp-for="HorarioInicio" class="control-label"></label>
                     <input asp-for="HorarioInicio" id="horarioInicio" class="form-control" />
@@ -51,27 +56,26 @@
 
                 <div class="form-group align-element">
                     <label asp-for="HorarioFim" class="control-label"></label>
-                    <input asp-for="HorarioFim" id="horarioFim" class="form-control" />
+                    <input asp-for="HorarioFim" id="horarioFim" class="form-control">
                     <span asp-validation-for="HorarioFim" class="text-danger"></span>
                 </div>
 
                 <div class="form-group align-element">
                     <label asp-for="DiaSemana" class="control-label"></label>
-                    @Html.DropDownListFor(model => model.DiaSemana, ViewBag.dias as SelectList, new
-               { @class = "form-control"})
+                    <select asp-for="DiaSemana" id="input-dia-semana" class="select2_single form-control" tabindex="-1">
+                        <option value="SEG"> Segunda </option>
+                        <option value="TER"> Terça   </option>
+                        <option value="QUA"> Quarto  </option>
+                        <option value="QUI"> Quinta  </option>
+                        <option value="SEX"> Sexta   </option>
+                        <option value="SAB"> Sábado  </option>
+                        <option value="DOM"> Domingo </option>
+                    </select>
                     <span asp-validation-for="DiaSemana" class="text-danger"></span>
                 </div>
             </div>
 
-            @if (TempData["aviso"] != null)
-            {
-                <div class="field-error" id="error-div" style="color: red">
-                    @TempData["aviso"]
-                </div>
-                <br />
-            }
-
-            <div class="form-group">
+            <div class="form-group col-sm-4">
                 <input type="submit" value="Salvar" class="btn btn-success" /> |
                 <a class="btn btn-primary" asp-action="Index">Voltar</a>
             </div>
@@ -79,7 +83,24 @@
     </div>
 </div>
 
+@if (TempData["mensagemSucesso"] != null)
+{
+    <div id="mensagem-retorno" onclick="swtAlertRedirectIndex('success','Parabéns!', '@TempData["mensagemSucesso"]','/Planejamento/Index')"></div>
+}
+else if (TempData["mensagemErro"] != null)
+{
+    <div id="mensagem-retorno" onclick="swtAlert('warning','Falha!', '@TempData["mensagemErro"]')"></div>
+}
 
 @section Scripts {
+
+    <script>
+        $(document).ready(function () {
+            if (document.querySelector('#mensagem-retorno'))
+                document.getElementById("mensagem-retorno").click();
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="~/js/sweet-alert.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
