--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Login/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Login/Index.cshtml
@@ -25,6 +25,7 @@
                 <span class="fas fa-lock"></span>
             </div>
         </div>
+        <span asp-validation-for="Senha" class="text-danger invalid-msg"></span>
     </div>
     <div class="row">
         <div class="col-8">
