--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/wwwroot/css/custom.css
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/wwwroot/css/custom.css
@@ -15,3 +15,44 @@
     top: -10px;
     margin-left: 5px;
 }
+
+.logo-container {
+    padding-top: 20px;
+}
+
+.logo {
+    width: 150px;
+    height: auto;
+    margin: auto;
+    display: block;
+    animation: bounceIn 0.6s;
+    transform: rotate(0deg) scale(1) translateZ(0);
+    transition: all 0.4s cubic-bezier(.8,1.8,.75,.75);
+    cursor: pointer;
+}
+
+    .logo:hover {
+        transform: rotate(-10deg) scale(1.1);
+    }
+
+@keyframes bounceIn {
+    0% {
+        opacity: 1;
+        transform: scale(.3);
+    }
+
+    50% {
+        opacity: 1;
+        transform: scale(1.05);
+    }
+
+    70% {
+        opacity: 1;
+        transform: scale(.9);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
