Adicionar e editar nova sala exclusiva

--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Create.cshtml
@@ -62,7 +62,7 @@
                     <select asp-for="DiaSemana" id="input-dia-semana" class="select2_single form-control" tabindex="-1">
                         <option value="SEG" selected> Segunda </option>
                         <option value="TER"> Terça   </option>
-                        <option value="QUA"> Quarto  </option>
+                        <option value="QUA"> Quarta  </option>
                         <option value="QUI"> Quinta  </option>
                         <option value="SEX"> Sexta   </option>
                         <option value="SAB"> Sábado  </option>
