--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Details.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Details.cshtml
@@ -28,7 +28,7 @@
             @Html.DisplayFor(model => model.Horario)
         </dd>
         <dt>
-            Dia da Semana
+            @Html.DisplayNameFor(model => model.DiaSemana)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.DiaSemana)
