--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
@@ -193,7 +193,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="#" asp-action="#">
+                    <a class="nav-link" asp-controller="SalaParticular" asp-action="Index">
                         <i class="nav-icon  fa fa-lock"></i>
                         <p>
                             Sala Particular
